fix(productTitle) : fix styling menu add to cart on mobile width

--- a/src/Components/Product/Title/productTitle.css
+++ b/src/Components/Product/Title/productTitle.css
@@ -1,92 +1,167 @@
+@media (width>768px) {
+  [class*="product-detail__"] {
+    text-align: left;
+  }
+
+  [class*="add-item__"] {
+    /* border: 1px solid #000; */
+    align-content: center;
+  }
+}
+
+@media (width<=768px) {
+  [class*="add-item__"] {
+    align-content: center;
+    font-size: x-large;
+  }
+
+  [class*="product-detail__"] {
+    font-size: small;
+  }
+}
+
 .product-detail {
-  display: flex;
-  flex-direction: column;
-}
-
-
-.product-detail__detail,
-.detail {
-  padding: var(--edge-mobile);
-  gap: 1vw;
-  background-color: #fff;
-  color: var(--color-text);
-  font-size: small;
-}
-
-.detail__status,
-.status {
-  display: flex;
-  justify-content: space-between;
-}
-
-.status__add-to-favorite {}
-
-.status__price {}
-
-.detail__name {
-  margin: var(--edge-mobile) 0;
-}
-
-
-.detail__title,
-.title {}
-
-.title__ratting {}
-
-.title__amount-in-stock {}
-
-.detail__name {}
-
-
-.detail__add-item,
-.add-item {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  display: flex;
+  display: grid;
   width: 100%;
-  background-color: var(--bgc-2);
-  z-index: 1;
-  height: 10vh;
-  justify-content: space-between;
-  color: white;
-  font-size: larger;
-  text-align: center;
-  align-self: center;
-  padding: var(--edge-mobile)
+  padding: 4vh;
+
+  @media (width<=768px) {
+    gap: 1vh;
+    grid-template-areas:
+      'price btnFavorite'
+      'name name'
+      'ratting amountStock'
+  }
+
+  @media (width>768px) {
+    gap: 1vh;
+    grid-template-areas:
+      'btnFavorite btnFavorite'
+      'name name'
+      'ratting amountStock'
+      '... ...'
+      '... ...'
+      'price price'
+      'price price'
+      '... ...'
+      '... ...'
+      'addItem addItem'
+      '... ...'
+      '... ...'
+      '... ...'
+      '... ...'
+      '... ...'
+      '... ...'
+    ;
+  }
 }
 
-.add-item__decrease {
-  order: 1;
-  background-color: inherit;
-  width: 20vw;
-  color: inherit;
-  border: 1px solid #000;
-  align-self: center;
+.product-detail__price {
+  grid-area: price;
+
+  @media (width<=768px) {
+    font-size: larger;
+  }
+
+  @media (width>768px) {
+    text-align: center;
+  }
+}
+
+.product-detail__add-to-favorite {
+  grid-area: btnFavorite;
+
+  @media (width<=768px) {
+    text-align: right;
+  }
+
+  @media (width>768px) {
+    text-align: right;
+  }
+}
+
+.product-detail__name {
+  grid-area: name;
+  font-size: larger;
+}
+
+.product-detail__ratting {
+  grid-area: ratting;
+}
+
+.product-detail__amount-in-stock {
+  grid-area: amountStock;
+
+  @media (width<=768px) {
+    text-align: right;
+  }
+
+  @media (width> 768px) {
+    text-align: right;
+  }
+}
+
+.product-detail__add-item,
+.add-item {
+  grid-area: addItem;
+  text-align: center;
+  display: grid;
+
+  @media (width<=768px) {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 5rem;
+    z-index: 1;
+    background-color: var(--bgc-2);
+    color: white;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+  }
+
+  @media (width > 768px) {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
 
 .add-item__amount {
-  order: 2;
-  font-size: large;
-  color: inherit;
-  border: 1px solid #000;
-  align-self: center;
+  @media (width<=768px) {
+    grid-area: 1 / 3 / 6 / 5;
+    font-size: larger;
+  }
+
+  @media (width > 768px) {
+    grid-area: 1 / 2 / 1 / 3;
+  }
+}
+
+.add-item__decrease {
+  @media (width<=768px) {
+    grid-area: 1 / 1 / 6 / 3;
+  }
+
+  @media (width > 768px) {}
 }
 
 .add-item__increase {
-  order: 3;
-  background-color: inherit;
-  width: 20vw;
-  color: inherit;
-  border: 1px solid #000;
-  align-self: center;
+  @media (width<=768px) {
+    grid-area: 1 / 5 / 6 / 7;
+  }
+
+  @media (width > 768px) {}
 }
 
 .add-item__add-to-cart {
-  order: 4;
-  background-color: inherit;
-  color: inherit;
-  border: 1px solid #000;
-  align-self: center;
-  padding: 1rem;
+  @media (width<=768px) {
+    grid-area: 1 / 7 / 6 / 11;
+    font-size: larger;
+  }
+
+  @media (width > 768px) {
+    grid-area: 2 / 1 / 3 / 4;
+    background-color: var(--bgc-2);
+    color: #fff;
+  }
 }
